# gaggiuino-shadow

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
src/gaggiuino_shadow/: config.py  database.py  machine_client.py  main.py  sync_engine.py
src/gaggiuino_shadow/routes/: profiles.py  settings.py  shots.py  status.py  sync.py  system.py
